--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -94,7 +94,7 @@
 <filter docker.services>
       @type       record_transformer
       enable_ruby true
-      remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP","SERVICE_NAME","transaction_id","platform","SYSTEMD_UNIT","HOSTNAME","MESSAGE","environment","POD_NAME"]
+      remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP","SERVICE_NAME","transaction_id","platform","SYSTEMD_UNIT","HOSTNAME","MESSAGE","environment","POD_NAME","event_time"]
       <record>
        event            ${record}
        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
